tests/paczka1/small_fuzzy/31157363.err
Error in line 2: 8dAxu31 S453 4,5
Error in line 3: 8dAxu31 S833 78,4
Error in line 6: pDL1rg S681 50,3
Error in line 7: 8dAxu31 S453 55,1
Error in line 11: 8dAxu31 A699 84,3
